--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angra-Tech</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <header class="header">
         <!-- Logo -->
         <a href="#">
-            <img class="logo" src="/images/arte/Angra Tech - Logotipo 2.png" alt="logo do evento">
+            <img class="logo" src="assets/images/Angra Tech - Logotipo 2.png" alt="logo do evento">
         </a>
 
         <!-- Botão do menu -->
@@ -33,95 +33,95 @@
     </header>
 
     <!-- Conteudo Principal -->
-    <main>
-        <div class="margem-baixo"><!-- primeiro banner -->
-            <img width="100%" src="/images/arte/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
-        </div>
-        <div id="sobre" class="texto margem-lado margem-baixo"><!-- texto Principal -->
-            <br><br>
-            <h2 class="centro margem-baixo">ANGRA TECH</h2>
-            <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
-            <br>
-            <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
-            <br>
-            <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
-            <br>
-            <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
-            <br>
-            <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
-            <br>
-            <!-- 
-                <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
-            -->
-        </div>
-        <div id="mapa" class="texto margem-lado margem-baixo"><!-- Mapa e local -->
-            <br><br>
-            <h2 class="centro margem-baixo">LOCAL</h2>
-            <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
-            <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
-            <br>
-            <div class="content"><!-- mapa google-->
-                <div class="mapouter"><!-- mapa google -->
-                <div class="gmap_canvas">
-                    <iframe width="100%" height="400px" id="gmap_canvas" src="https://maps.google.com/maps?q=centro%20de%20estudos%20ambientais%20angra%20dos%20reis&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                    <a href="https://123movies-to.org">123 movies</a>
-                    <br>
-                    <style>
-                        .mapouter{position:relative;text-align:right;height:400px;width:100%;}
-                    </style>
-                    <a href="https://www.embedgooglemap.net"></a>
-                    <style>
-                    .gmap_canvas {overflow:hidden;background:none!important;height:400px;width:100%;}
-                    </style>
-                    </div>
+    
+    <div class="margem-baixo"><!-- primeiro banner -->
+        <img width="100%" src="assets/images/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
+    </div>
+    <div id="sobre" class="texto margem-lado margem-baixo"><!-- texto Principal -->
+        <br><br>
+        <h2 class="centro margem-baixo">ANGRA TECH</h2>
+        <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
+        <br>
+        <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
+        <br>
+        <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
+        <br>
+        <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
+        <br>
+        <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
+        <br>
+        <!-- 
+            <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
+        -->
+    </div>
+    <div id="mapa" class="texto margem-lado margem-baixo"><!-- Mapa e local -->
+        <br><br>
+        <h2 class="centro margem-baixo">LOCAL</h2>
+        <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
+        <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
+        <br>
+        <div class="content"><!-- mapa google-->
+            <div class="mapouter"><!-- mapa google -->
+            <div class="gmap_canvas">
+                <iframe width="100%" height="400px" id="gmap_canvas" src="https://maps.google.com/maps?q=centro%20de%20estudos%20ambientais%20angra%20dos%20reis&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <a href="https://123movies-to.org">123 movies</a>
+                <br>
+                <style>
+                    .mapouter{position:relative;text-align:right;height:400px;width:100%;}
+                </style>
+                <a href="https://www.embedgooglemap.net"></a>
+                <style>
+                .gmap_canvas {overflow:hidden;background:none!important;height:400px;width:100%;}
+                </style>
                 </div>
             </div>
         </div>
-        <div id="inscricao" class="texto margem-lado margem-baixo"><!-- inscrição -->
-            <br><br>
-            <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
-            <div class="grid-container">
-                <div class="grid-item">
-                    <img width="200px" height="200px" src="/images/arte/qrcode.png" alt="código QR">
-                </div>
-                <div class="grid-item"></div>
-                <div class="grid-item">
-                    <br>
-                    <p>Inscreva-se atraves do código QR ou atraves do link:</p>
-                    <br>
-                    <a href="https://www.sympla.com.br/evento/angra-tech/1698625?qrcode=true">inscreva-se aqui</a>
-                    <br>
-                    <br>
-                    <p>Vagas Limitadas!</p>
-                </div>
+    </div>
+    <div id="inscricao" class="texto margem-lado margem-baixo"><!-- inscrição -->
+        <br><br>
+        <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
+        <div class="grid-container">
+            <div class="grid-item">
+                <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
+            </div>
+            <div class="grid-item"></div>
+            <div class="grid-item">
+                <br>
+                <p>Inscreva-se atraves do código QR ou atraves do link:</p>
+                <br>
+                <a href="https://www.sympla.com.br/evento/angra-tech/1698625?qrcode=true">inscreva-se aqui</a>
+                <br>
+                <br>
+                <p>Vagas Limitadas!</p>
             </div>
         </div>
-        <div id="apoio" class="fundo-imagem"><!-- colaboradores -->
+    </div>
+    <div id="apoio" class="fundo-imagem"><!-- colaboradores -->
+        <br><br>
+        <div class="margem-lado">
+            <h1 class="centro margem-baixo" text-color="#000000">Patrocinadores</h1>
+            <div class="grid-container-patrocinadores">
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+                <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+                <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+            </div>
             <br><br>
-            <div class="margem-lado">
-                <h1 class="centro margem-baixo" text-color="#000000">Patrocinadores</h1>
-                <div class="grid-container-patrocinadores">
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/650b71202a8d4a13889d48eba4c73757.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/SafeSpeedSystem-logo-transp-branca.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/650b71202a8d4a13889d48eba4c73757.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/SafeSpeedSystem-logo-transp-branca.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/Genesis.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/650b71202a8d4a13889d48eba4c73757.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/Genesis.png"></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                    <div class="grid-item"><img width="80%" height="100%" src="/images/logo/SafeSpeedSystem-logo-transp-branca.png"></div>
-                </div>
-                <br><br>
-                <h1 class="centro margem-baixo" text-color="#000000">Realizadores</h1>
-                <div class="grid-container-logos">
-                    <div class="grid-item"><img width="40%" height="100%" src="/images/logo/Secretaria de Desenvolvimento Econômico - 01.png" alt=""></div>
-                    <div class="grid-item"><img width="40%" height="100%" src="/images/logo/prefeitura.png" alt=""></div>
-                </div>
+            <h1 class="centro margem-baixo" text-color="#000000">Realizadores</h1>
+            <div class="grid-container-logos">
+                <div class="grid-item"><img width="40%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 01.png" alt=""></div>
+                <div class="grid-item"><img width="40%" height="100%" src="assets/images/prefeitura.png" alt=""></div>
             </div>
         </div>
-    </main>
+    </div>
+    
 
 </body>
 
