--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angra-Tech</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -95,34 +96,64 @@
                 <p>Vagas Limitadas!</p>
             </div>
         </div>
-    </div>
-    <div id="apoio" class="fundo-imagem"><!-- colaboradores -->
         <br><br>
-        <div class="margem-lado">
-            <h1 class="centro margem-baixo" text-color="#000000">Patrocinadores</h1>
-            <div class="grid-container-patrocinadores">
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
-                <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-                <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-                <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+    </div>   
+    <div id="apoio" class="margem-lado texto"><!-- colaboradores -->
+        <h2 class="centro margem-baixo">PATROCINADORES</h2>
+        <div class="grid-container-patrocinadores fonte">
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+            <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
+            <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+        </div>
+        <br><br><br><br><br><br>
+        <hr width="100%">
+    </div>
+    <div class="texto centro"><!--footer-->
+        <div class="responsiveBox">
+            <div class="responsiveItem">
+                <ul class="centro">
+                    <li>NAVEGAÇÃO</li>
+                    <br>
+                    <li><a href="#sobre">Sobre o Evento</a></li>
+                    <li><a href="#mapa">Local</a></li>
+                    <li><a href="#inscricao">Inscrição</a></li>
+                    <li><a href="#apoio">Patrocinadores</a></li>
+                </ul>
             </div>
-            <br><br>
-            <h1 class="centro margem-baixo" text-color="#000000">Realizadores</h1>
-            <div class="grid-container-logos">
-                <div class="grid-item"><img width="40%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 01.png" alt=""></div>
-                <div class="grid-item"><img width="40%" height="100%" src="assets/images/prefeitura.png" alt=""></div>
+            <div class="responsiveItem">
+                <p class="centro">REALISADORES</p>
+                <br>
+                <img width="70%"  src="assets/images/Secretaria de Desenvolvimento Econômico - 01.png" alt="">
+                <img width="70%" src="assets/images/prefeitura.png" alt="">
+            </div>
+            <div class="responsiveItem centro">
+                <ul class="center">
+                    <li>REDES SOCIAIS</li>
+                    <br>
+                    <li>
+                        <a href="#" class="fa fa-facebook"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-instagram"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-envelope"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-    
-
 </body>
 
 </html>
