--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@
     <div class="margem-baixo"><!-- primeiro banner -->
         <img width="100%" src="assets/images/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
     </div>
-    <div id="sobre" class="texto margem-lado margem-baixo"><!-- texto Principal -->
-        <br><br>
-        <h2 class="centro margem-baixo">ANGRA TECH</h2>
-        <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
-        <br>
-        <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
-        <br>
-        <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
-        <br>
-        <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
-        <br>
-        <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
-        <br>
-        <!-- 
-            <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
-        -->
+    <div class="fundo-imagem"><!-- texto Principal -->
+        <div id="sobre" class="texto margem-lado margem-baixo">
+            <br><br>
+            <h2 class="centro margem-baixo">ANGRA TECH</h2>
+            <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
+            <br>
+            <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
+            <br>
+            <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
+            <br>
+            <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
+            <br>
+            <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
+            <br>
+            <!-- 
+                <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
+            -->
+        </div>
     </div>
     <div id="mapa" class="texto margem-lado margem-baixo"><!-- Mapa e local -->
         <br><br>
@@ -99,19 +101,12 @@
         <br><br>
     </div>   
     <div id="apoio" class="margem-lado texto"><!-- colaboradores -->
-        <h2 class="centro margem-baixo">PATROCINADORES</h2>
+        <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
         <div class="grid-container-patrocinadores fonte">
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png" alt=""></div>
             <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
-            <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-            <div class="grid-item"><img width="100%" height="100%" src="assets/images/Genesis.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt=""></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca (1).png"></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png"></div>
         </div>
         <br><br><br><br><br><br>
         <hr width="100%">
@@ -134,26 +129,23 @@
                 <img width="70%"  src="assets/images/Secretaria de Desenvolvimento Econômico - 01.png" alt="">
                 <img width="70%" src="assets/images/prefeitura.png" alt="">
             </div>
-            <div class="responsiveItem centro">
-                <ul class="center">
+            <div class="responsiveItem3 centro">
+                <ul class="centro">
                     <li>REDES SOCIAIS</li>
                     <br>
                     <li>
-                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="branco fa fa-instagram"></a>
                     </li>
                     <li>
-                        <a href="#" class="fa fa-twitter"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="fa fa-instagram"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="fa fa-envelope"></a>
+                        <a href="#" class="branco fa fa-envelope"></a>
                     </li>
                 </ul>
             </div>
         </div>
+        <p class="centro"><a class="branco" href="">exemplo@gmail.com</a></p>
+        <p class="centro"><a class="branco" href="">(00)-0000-000</a></p>
     </div>
+    <br>
 </body>
 
 </html>
