--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
         <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
         <div class="grid-container">
             <div class="grid-item">
-                <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
+                <div id="qrcode">
+                    <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
+                </div>
             </div>
             <div class="grid-item"></div>
             <div class="grid-item">
@@ -103,7 +105,7 @@
     <div id="apoio" class="margem-lado texto"><!-- colaboradores -->
         <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
         <div class="grid-container-patrocinadores fonte">
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png" alt=""></div>
+            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo PB.png" alt=""></div>
             <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
             <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca (1).png"></div>
             <div class="grid-item"><img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png"></div>
@@ -114,20 +116,9 @@
     <div class="texto centro"><!--footer-->
         <div class="responsiveBox">
             <div class="responsiveItem">
-                <ul class="centro">
-                    <li>NAVEGAÇÃO</li>
-                    <br>
-                    <li><a href="#sobre">Sobre o Evento</a></li>
-                    <li><a href="#mapa">Local</a></li>
-                    <li><a href="#inscricao">Inscrição</a></li>
-                    <li><a href="#apoio">Patrocinadores</a></li>
-                </ul>
-            </div>
-            <div class="responsiveItem">
-                <p class="centro">REALISADORES</p>
+                <p class="centro">REALIZAÇÃO</p>
                 <br>
-                <img width="70%"  src="assets/images/Secretaria de Desenvolvimento Econômico - 01.png" alt="">
-                <img width="70%" src="assets/images/prefeitura.png" alt="">
+                <img width="100%" src="assets/images/prefeitura.png" alt="">
             </div>
             <div class="responsiveItem3 centro">
                 <ul class="centro">
@@ -142,8 +133,9 @@
                 </ul>
             </div>
         </div>
-        <p class="centro"><a class="branco" href="">exemplo@gmail.com</a></p>
-        <p class="centro"><a class="branco" href="">(00)-0000-000</a></p>
+        <span>
+            <p class="centro"><a class="branco" href="">(24)-3377-4507 / des.economico@angra.rj.gov.br</a></p>
+        </span>
     </div>
     <br>
 </body>
