correção do qrcode

--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
     <div id="inscricao" class="texto margem-lado margem-baixo"><!-- inscrição -->
         <br><br>
         <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
-        <div class="grid-container">
-            <div class="grid-item">
+        <div class="responsiveBox">
+            <div class="responsiveItemCode">
                 <div id="qrcode">
                     <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
                 </div>
             </div>
-            <div class="grid-item"></div>
-            <div class="grid-item">
+            <div class="responsiveItemCode">
                 <br>
                 <p>Inscreva-se atraves do código QR ou atraves do link:</p>
                 <br>
@@ -134,7 +133,7 @@
             </div>
         </div>
         <span>
-            <p class="centro"><a class="branco" href="">(24)-3377-4507 / des.economico@angra.rj.gov.br</a></p>
+            <p class="centro">(24)-3377-4507 / des.economico@angra.rj.gov.br</p>
         </span>
     </div>
     <br>
