Metodo flex nas logos

--- a/index.html
+++ b/index.html
@@ -103,11 +103,19 @@
     </div>   
     <div id="apoio" class="margem-lado texto"><!-- colaboradores -->
         <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
-        <div class="grid-container-patrocinadores fonte">
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/KM Cash - Logotipo PB.png" alt=""></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca (1).png"></div>
-            <div class="grid-item"><img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png"></div>
+        <div class="respBox">
+            <div class="respItemLogo">
+                <img width="80%" height="100%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
+            </div>
+            <div class="respItemLogo">
+                <img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png">
+            </div>
+            <div class="respItemLogo">
+                <img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca (1).png">
+            </div>
+            <div class="respItemLogo">
+                <img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png">
+            </div>
         </div>
         <br><br><br><br><br><br>
         <hr width="100%">
