Area de palestrantes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <nav class="nav">
             <ul class="menu">
                 <li><a href="#sobre">Sobre o Evento</a></li>
+                <li><a href="#palestra">Palestrantes</a></li>
                 <li><a href="#mapa">Local</a></li>
                 <li><a href="#inscricao">Inscrição</a></li>
                 <li><a href="#apoio">Patrocinadores</a></li>
@@ -56,6 +57,45 @@
                 <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
             -->
         </div>
+    </div>
+    <div id="palestra" class="margem-lado texto"><!-- Palestrantes -->
+        <h2 class="centro margem-baixo">PALESTRANTES</h2>
+        <div class="respBox centro">
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+            <div class="respItemIcon">
+                <img width="100%" src="assets/images/blank.png" alt="">
+                <p>Palestrante</p>
+            </div>
+        </div>
+        <br><br><br><br><br><br>
+        <hr width="100%">
     </div>
     <div id="mapa" class="texto margem-lado margem-baixo"><!-- Mapa e local -->
         <br><br>
