--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <!-- Logo -->
         <a href="#">
-            <img class="logo" src="assets/images/Angra Tech - Logotipo 2.png" alt="logo do evento">
+            <img class="logo" src="assets/images/Angra TechNotWhite.png" alt="logo do evento">
         </a>
 
         <!-- Botão do menu -->
@@ -36,11 +36,11 @@
 
     <!-- Conteudo Principal -->
     
-    <div class="margem-baixo"><!-- primeiro banner -->
+    <div><!-- primeiro banner -->
         <img width="100%" src="assets/images/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
     </div>
     <div class="fundo-imagem"><!-- texto Principal -->
-        <div id="sobre" class="texto margem-lado margem-baixo">
+        <div id="sobre" class="textoBranco margem-lado margem-baixo">
             <br><br>
             <h2 class="centro margem-baixo">ANGRA TECH</h2>
             <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
@@ -144,16 +144,16 @@
         <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
         <div class="respBox">
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
+                <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/650b71202a8d4a13889d48eba4c73757.png">
+                <img width="80%" height="100%" src="assets/images/inocolum.png">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca (1).png">
+                <img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/Secretaria de Desenvolvimento Econômico - 04.png">
+                <img width="80%" height="100%" src="assets/images/sdeBleck.png">
             </div>
         </div>
         <br><br><br><br><br><br>
@@ -164,7 +164,7 @@
             <div class="responsiveItem">
                 <p class="centro">REALIZAÇÃO</p>
                 <br>
-                <img width="100%" src="assets/images/prefeitura.png" alt="">
+                <img width="100%" src="assets/images/prefeituraBlack.png" alt="">
             </div>
             <div class="responsiveItem3 centro">
                 <ul class="centro">
