Melhora na area de palestrantes e codeFix

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 
     <!-- Conteudo Principal -->
     
-    <div><!-- primeiro banner -->
+    <!-- primeiro banner -->
+    <div>
         <img width="100%" src="assets/images/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
     </div>
-    <div class="fundo-imagem"><!-- texto Principal -->
+    <!-- texto Principal -->
+    <div class="fundo-imagem">
         <div id="sobre" class="textoBranco margem-lado margem-baixo">
             <br><br>
             <h2 class="centro margem-baixo">ANGRA TECH</h2>
@@ -58,45 +60,69 @@
             -->
         </div>
     </div>
-    <div id="palestra" class="margem-lado texto"><!-- Palestrantes -->
+    <!-- Palestrantes -->
+    <div id="palestra" class="margem-lado texto">
         <h2 class="centro margem-baixo">PALESTRANTES</h2>
         <div class="respBox centro">
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
             </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
             </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
             </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
             </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
             </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
-            </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
-            </div>
-            <div class="respItemIcon">
-                <img width="100%" src="assets/images/blank.png" alt="">
-                <p>Palestrante</p>
-            </div>
+            <div class="respItemIcon"><!-- div dos palestrantes -->
+                <div class="itemLeft">
+                    <img width="100%" src="assets/images/blank.png" alt="">
+                    <p>Palestrante</p>
+                </div>
+                <div class="itemRight">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                </div>
+            </div>     
         </div>
         <br><br>
     </div>
-    <div id="mapa" class="texto margem-lado margem-baixo"><!-- Mapa e local -->
+    <!-- Mapa e local -->
+    <div id="mapa" class="texto margem-lado margem-baixo">
         <br><br>
         <h2 class="centro margem-baixo">LOCAL</h2>
         <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
@@ -119,7 +145,8 @@
             </div>
         </div>
     </div>
-    <div id="inscricao" class="texto margem-lado margem-baixo"><!-- inscrição -->
+    <!-- inscrição -->
+    <div id="inscricao" class="texto margem-lado margem-baixo">
         <br><br>
         <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
         <div class="responsiveBox">
@@ -140,26 +167,28 @@
         </div>
         <br><br>
     </div>   
-    <div id="apoio" class="margem-lado texto"><!-- colaboradores -->
+    <!-- colaboradores -->
+    <div id="apoio" class="margem-lado texto">
         <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
         <div class="respBox">
             <div class="respItemLogo">
                 <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/inocolum.png">
+                <img width="100%" height="100%" src="assets/images/inocolum.png">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
+                <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
             </div>
             <div class="respItemLogo">
-                <img width="80%" height="100%" src="assets/images/sdeBleck.png">
+                <img width="100%" height="100%" src="assets/images/sdeBleck.png">
             </div>
         </div>
         <br><br><br><br><br><br>
         <hr width="100%">
     </div>
-    <div class="texto centro"><!--footer-->
+    <!--footer-->
+    <div class="texto centro">
         <div class="responsiveBox">
             <div class="responsiveItem">
                 <p class="centro">REALIZAÇÃO</p>
@@ -183,7 +212,6 @@
             <p class="centro">(24)-3377-4507 / des.economico@angra.rj.gov.br</p>
         </span>
     </div>
-    
     <br>
 </body>
 
