--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <!-- primeiro banner -->
     <div>
-        <img width="100%" src="assets/images/banner1.png" alt="Empreendedorismo, tecnologia e inovação">
+        <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
     </div>
     <!-- texto Principal -->
     <div class="fundo-imagem">
